@@ -81,8 +81,17 @@
     <a target="_blank" href="https://trac.cyberduck.io/milestone/8.5.8"><strong>Version 8.5.8</strong></a>
 </p>
 <ul>
+    <li><span class="label label-warning">Bugfix</span> Presigned URL does not consider the server port number (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/13981">#13981</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> File changes in editors are no longer uploaded when file has
+        previously deleted by a save process (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/14455">#14455</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Unable to duplicate files (macOS) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/14413">#14413</a>)</li>
     <li><span class="label label-warning">Bugfix</span> Failure reverting previous version in vault (Cryptomator, OneDrive, Google Drive, Dropbox) (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/14410">#14410</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Hide directory placeholders only containing hidden files (Backblaze B2) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/14431">#14431</a>)</li>
 </ul>
 
 <p>
